--- a/Assets/EGF/Runtime/EGF.asmdef
+++ b/Assets/EGF/Runtime/EGF.asmdef
@@ -5,7 +5,8 @@
         "GUID:9e24947de15b9834991c9d8411ea37cf",
         "GUID:84651a3751eca9349aac36a66bba901b",
         "GUID:92401658c2e35d94c93ddb991c046b12",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23"
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:15fc0a57446b3144c949da3e2b9737a9"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
