修复 Naughty Attributes 报错

--- a/Assets/EGF/plugins/NaughtyAttributes/Samples/DemoScene/Test/NaughtyAttributes.Test.asmdef
+++ b/Assets/EGF/plugins/NaughtyAttributes/Samples/DemoScene/Test/NaughtyAttributes.Test.asmdef
@@ -2,7 +2,7 @@
     "name": "NaughtyAttributes.Test",
     "rootNamespace": "",
     "references": [
-        "EGFCore"
+        "GUID:313e34aac656a49268b99cf9d4cfea49"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
