--- a/Assets/EGF/Runtime/EGF.asmdef
+++ b/Assets/EGF/Runtime/EGF.asmdef
@@ -6,9 +6,7 @@
         "GUID:84651a3751eca9349aac36a66bba901b",
         "GUID:92401658c2e35d94c93ddb991c046b12",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:15fc0a57446b3144c949da3e2b9737a9",
-        "GUID:21b0c8d1703a94250bfac916590cea4f",
-        "GUID:ea715009a4efd4c6cbc85be3ae097dd3"
+        "GUID:15fc0a57446b3144c949da3e2b9737a9"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -17,12 +15,6 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [
-        {
-            "name": "com.unity.visualscripting",
-            "expression": "1.7.0",
-            "define": "VISUAL_SCRIPTING_ENABLE"
-        }
-    ],
+    "versionDefines": [],
     "noEngineReferences": false
 }
